src/App.scss
$main-text-color: #FFFFFF;
$best-sellers-color: #EF476F; 
$mens-color: #FFD166;
$womens-color: #06D6A0; 
$everyone-color: #118AB2; 
$card-base-color: #464646;
$outer-color: #073B4C; 

$shelf-tag-font-size: 1.25em;
$shelf-arrow-font-size: 1.37em;
$tcard-border-width: 2px;

*{
  margin:0; 
  padding:0;
}

input{
  display: inline;
}
span{
  color: $best-sellers-color;
}
.card{
  height: 100%;
}

.card-body{
  background: $card-base-color;
  color: $main-text-color;
}

.container{
  margin-top:10px;
  margin-bottom:10px;
}

.color-nav{
  background-color: $outer-color;
  color: $main-text-color;
  &:hover{
    color:$mens-color;
    text-decoration: none;
  }
}

.col-sm{
  margin-top: 10px;
  margin-bottom:10px;
}
.arrowbtn{
  border: none;
  background: $main-text-color;

}

.bestSellersTag{
  background:$best-sellers-color; 
  color: $main-text-color;
  border:none;
  font-size: $shelf-tag-font-size;

}
.bestSellersArrow{

  color: $best-sellers-color;
  font-size: $shelf-arrow-font-size;
}

.bestSellersTDiv{
  border: solid $best-sellers-color $tcard-border-width;
}

.mensTag{
  background:$mens-color;
  color: $main-text-color;
  border:none;
  font-size: $shelf-tag-font-size;
}

.mensArrow{
  color:$mens-color;
  font-size: $shelf-arrow-font-size;
}
.mensTDiv{
  border: solid $mens-color $tcard-border-width;
}

.womensTag{
  background: $womens-color;
  color: $main-text-color;
  border:none;
  font-size: $shelf-tag-font-size;
}

.womensArrow{
  color: $womens-color;
  font-size: $shelf-arrow-font-size;
}
.womensTDiv{
  border: solid $womens-color $tcard-border-width;
}
.forEveryoneTag{
  background: $everyone-color;
  color: $main-text-color;
  border:none;
  font-size: $shelf-tag-font-size;
}
.forEveryoneArrow{
  color:$everyone-color;
  font-size: $shelf-arrow-font-size;
}
.forEveryoneTDiv{
  border: solid $everyone-color $tcard-border-width;
}
.underline{
  height: 3px; 
  padding: 0px;
}
.outer{
  color: $main-text-color; 
  background: $outer-color;
  margin:0; 
  padding:0; 
}

.searchDiv{
  height: 80vh;
  overflow: auto;
}

.oopsDiv{
  font-size: 2em;
  color: $outer-color; 
  
}



.searchTag{
  background: $card-base-color;
  color: $main-text-color;
  border:none;
  font-size: $shelf-tag-font-size;
}

.searchTDiv{
  border: solid $card-base-color $tcard-border-width;
}

.teecard-text-height-control{
  min-height: 100px;
}


#hideBtn{
  display: none;
}
#sizingTable{
 border-radius: 7px;
}

.hide-overflow{
  overflow-x: hidden;
}

.setHeight{
  min-height: 80vh;
}

